@@ -1,3 +1,9 @@
+2008-01-08  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/34681
+	PR fortran/34704
+	* gfortran.dg/alloc_comp_default_init_1.f90: New test.
+
 2008-01-07  Janis Johnson  <janis187@us.ibm.com>
 
 	* lib/target-supports.exp (check_effective_target_powerpc_spu): New.
